# RSN

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  PHASE4_COMPLETION.md  PHASE5C_COMPLETION.md  PHASE5D_COMPLETION.md  PHASE5E_COMPLETION.md  README-BOZ.md  README.md  RecoverySoftNetz_Executive_Summary_EN.md  RecoverySoftNetz_Implementation_Roadmap.md  RecoverySoftNetz_Technical_Documentation_TR.md  boz-log.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVICE_IO_INTEGRATION.md  UI_OVERVIEW.md
src/: README.md
src/core/: recovery_engine.cpp  recovery_engine.h
src/filesystems/: filesystem_interface.h
src/io/: device_io.cpp  device_io.h  device_io_adapter.cpp  device_io_adapter.h
src/parsers/: README.md  apfs_parser.cpp  apfs_parser.h  ext4_parser.cpp  ext4_parser.h  ntfs_parser.cpp  ntfs_parser.h
src/ui/: CMakeLists.txt  device_wizard.cpp  device_wizard.h  main.cpp  mainwindow.cpp  mainwindow.h  progress_monitor.cpp  progress_monitor.h  results_view.cpp  results_view.h  ui_resources.qrc
tests/io/: device_io_test.cpp
tests/ui/: ui_integration_test.cpp
tests/unit/: apfs_parser_test.cpp  ext4_parser_test.cpp  ntfs_parser_test.cpp  recovery_engine_test.cpp
